View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026241 | Open CASCADE | OCCT:Modeling Algorithms | public | 2015-05-20 11:27 | 2015-10-23 20:51 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | tweak | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026241: Sewing algorithm computes tolerance of joint vertex too rough | ||||
Description | The internal method ComputeToleranceVertex in the file BRepBuilderAPI_Sewing.cxx uses too simple formula to compute the tolerance of the new vertex. Perhaps, it is needed to recompute both the 3D point of the new vertex and its tolerance in order to obtain the least possible vertex. Please see the closed issue 0024803 for details, where such improvement was made in Boolean operations algorithm. | ||||
Steps To Reproduce | plane p 0 0 0 0 0 1 1 0 0 mkface f1 p 0 10 0 10 mkface f2 p 0 10 11 21 settoler f1 2 settoler f2 3 sewing r 3 f1 f2 toler r # Tolerance MAX=5.5 ... # ... # should be # Tolerance MAX=3 ... # ... | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug26241 | ||||
|
Branch CR26241 has been created by ika. SHA-1: 066af8dcf3e25f6d28124d71b71c7122e016d6fc Detailed log of new commits: Author: ika Date: Mon Jun 15 12:37:14 2015 +0300 0026241: Sewing algorithm computes tolerance of joint vertex too rough Upgrade method of computing vertex tolerance. Update function, which used the old method. |
|
Dear GKA, could you please review branch CR26241. |
|
Branch CR26241 is ready to be tested |
|
Dear BugMaster, Branch CR26241 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 066af8dcf3e25f6d28124d71b71c7122e016d6fc Number of compiler warnings: occt component : Linux: 29 (25 on master) Windows: 0 (0 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) There are new additional compilation warnings on Linux platform: http://jenkins-test-01.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_17008/job/CR26241-master_build_occt_linux/1/warnings17Result/package.-1172724059/ BRepBuilderAPI_Sewing.cxx:682, GNU C Compiler 4 (gcc), Priority: Normal variable 'p11' set but not used [-Wunused-but-set-variable] BRepBuilderAPI_Sewing.cxx:683, GNU C Compiler 4 (gcc), Priority: Normal variable 'p12' set but not used [-Wunused-but-set-variable] BRepBuilderAPI_Sewing.cxx:684, GNU C Compiler 4 (gcc), Priority: Normal variable 'p21' set but not used [-Wunused-but-set-variable] BRepBuilderAPI_Sewing.cxx:685, GNU C Compiler 4 (gcc), Priority: Normal variable 'p22' set but not used [-Wunused-but-set-variable] Regressions/Differences/Improvements: http://occt-tests/CR26241-master-occt-64/Debian70-64/summary.html http://occt-tests/CR26241-master-occt-64/Windows-64-VC10/summary.html bugs modalg_2 bug22770_8, bug22770_9, bug22770_11, bug22770_23, bug22770_24, bug22770_26, bug22770_27, bug22770_28, bug22770_30 - was corrected and pushed to branch CR26241 bugs modalg_5 bug24390_2 - was corrected and pushed to branch CR26241 bugs modalg_6 bug24357 - was corrected and pushed to branch CR26241 bugs moddata_2 bug42, bug343 - was corrected and pushed to branch CR26241 sewing tol_1 S5 - was corrected and pushed to branch CR26241 bugs modalg_2 bug22770_10, bug22770_25 sewing tol_100 I5, I6, I9, J3, T8, U1 Testing cases: http://occt-tests/CR26241-master-occt-64/Debian70-64/bugs/modalg_6/bug26241.html http://occt-tests/CR26241-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26241.html bugs modalg_6 bug26241: OK Testing on Linux: occt component : Total MEMORY difference: 96403472 / 97301379 [-0.92%] Total CPU difference: 18162.080000000038 / 18322.08000000008 [-0.87%] products component : Total MEMORY difference: 24139610 / 24348056 [-0.86%] Total CPU difference: 7872.140000000025 / 7869.770000000022 [+0.03%] Testing on Windows: occt component : Total MEMORY difference: 56468293 / 56340868 [+0.23%] Total CPU difference: 17260.63704439876 / 16994.63973929891 [+1.57%] products component : Total MEMORY difference: 15542227 / 15546897 [-0.03%] Total CPU difference: 6272.50380809997 / 6189.043273099954 [+1.35%] There are no differences in images found by testdiff. |
|
Branch CR26241 has been updated by mkv. SHA-1: 1a232ca2261895d2e92b4888b6d8e2569f8926dc Detailed log of new commits: Author: mkv Date: Wed Jun 17 17:46:06 2015 +0300 Test case for issue CR26241 |
|
Dear ika, could you please review following test case bugs modalg_6 bug26241 |
|
Dear ika, following test cases are corrected and pushed to branch CR26241 of occt git-repository bugs modalg_2 bug22770_8, bug22770_9, bug22770_11, bug22770_23, bug22770_24, bug22770_26, bug22770_27, bug22770_28, bug22770_30 bugs modalg_5 bug24390_2 bugs modalg_6 bug24357 bugs moddata_2 bug42, bug343 sewing tol_1 S5 |
|
Branch CR26241 has been updated by ika. SHA-1: 2975e4d509f5358c572d0f6b4fe15e68d2c0745b Detailed log of new commits: Author: ika Date: Wed Jun 17 18:29:38 2015 +0300 0026241: Sewing algorithm computes tolerance of joint vertex too rough Delete obsolete variables. |
|
Dear MKV, the following bugs bugs modalg_2 bug22770_10, bug22770_25 sewing tol_100 I5, I6, I9, J3, T8, U1 are not regressions but improvementы (decrease of tolerance) and new behavior (difference in number of edges), so could you please update them? The test case is OK. I have also deleted obsolete variables, which were the causes of warnings. |
|
Dear BugMaster, Branch CR26241 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 2975e4d509f5358c572d0f6b4fe15e68d2c0745b Number of compiler warnings: occt component : Linux: 25 (25 on master) Windows: 0 (0 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: http://occt-tests/CR26241-master-occt-64/Debian70-64/summary.html http://occt-tests/CR26241-master-occt-64/Windows-64-VC10/summary.html bugs modalg_2 bug22770_10, bug22770_25 - was corrected and pushed to branch CR26241 sewing tol_100 I5, I6, I9, J3, T8, U1 - was corrected and pushed to branch CR26241 Testing cases: http://occt-tests/CR26241-master-occt-64/Debian70-64/bugs/modalg_6/bug26241.html http://occt-tests/CR26241-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26241.html bugs modalg_6 bug26241: OK Testing on Linux: occt component : Total MEMORY difference: 96590594 / 97528318 [-0.96%] Total CPU difference: 18180.200000000033 / 18347.960000000083 [-0.91%] products component : Total MEMORY difference: 24153417 / 24348056 [-0.80%] Total CPU difference: 8122.149999999998 / 7869.770000000022 [+3.21%] Testing on Windows: occt component : Total MEMORY difference: 56839925 / 56631331 [+0.37%] Total CPU difference: 17296.75127589899 / 17099.113608998927 [+1.16%] products component : Total MEMORY difference: 15542148 / 15546897 [-0.03%] Total CPU difference: 6190.260080899987 / 6189.043273099954 [+0.02%] There are no differences in images found by testdiff. |
|
Branch CR26241 has been updated by mkv. SHA-1: d552bda58a9c92b69510adb61c189af8a544ef3a Detailed log of new commits: Author: mkv Date: Thu Jun 18 12:28:03 2015 +0300 Small correction of test cases for issue CR26241 |
|
Dear ika, following test cases are corrected and pushed to branch CR26241 of occt git-repository bugs modalg_2 bug22770_10, bug22770_25 sewing tol_100 I5, I6, I9, J3, T8, U1 |
|
Branch CR26241 has been deleted by inv. SHA-1: d552bda58a9c92b69510adb61c189af8a544ef3a |
occt: master 93937391 2015-06-18 11:03:53 Committer: bugmaster Details Diff |
0026241: Sewing algorithm computes tolerance of joint vertex too rough Upgrade method of computing vertex tolerance. Update function, which used the old method. Test case for issue CR26241 Delete obsolete variables. Small correction of test cases for issue CR26241 |
Affected Issues 0026241 |
|
mod - src/BRepBuilderAPI/BRepBuilderAPI_Sewing.cxx | Diff File | ||
mod - tests/bugs/modalg_2/bug22770_10 | Diff File | ||
mod - tests/bugs/modalg_2/bug22770_11 | Diff File | ||
mod - tests/bugs/modalg_2/bug22770_23 | Diff File | ||
mod - tests/bugs/modalg_2/bug22770_24 | Diff File | ||
mod - tests/bugs/modalg_2/bug22770_25 | Diff File | ||
mod - tests/bugs/modalg_2/bug22770_26 | Diff File | ||
mod - tests/bugs/modalg_2/bug22770_27 | Diff File | ||
mod - tests/bugs/modalg_2/bug22770_28 | Diff File | ||
mod - tests/bugs/modalg_2/bug22770_30 | Diff File | ||
mod - tests/bugs/modalg_2/bug22770_8 | Diff File | ||
mod - tests/bugs/modalg_2/bug22770_9 | Diff File | ||
mod - tests/bugs/modalg_5/bug24390_2 | Diff File | ||
mod - tests/bugs/modalg_6/bug24357 | Diff File | ||
add - tests/bugs/modalg_6/bug26241 | Diff File | ||
mod - tests/bugs/moddata_2/bug343 | Diff File | ||
mod - tests/bugs/moddata_2/bug42 | Diff File | ||
mod - tests/sewing/tol_100/T8 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-05-20 11:27 |
|
New Issue | |
2015-05-20 11:27 |
|
Assigned To | => gka |
2015-05-26 15:08 |
|
Assigned To | gka => ika |
2015-05-26 15:08 |
|
Status | new => assigned |
2015-06-15 12:37 | git | Note Added: 0042136 | |
2015-06-15 13:01 | ika | Note Added: 0042137 | |
2015-06-15 13:01 | ika | Assigned To | ika => gka |
2015-06-15 13:01 | ika | Status | assigned => resolved |
2015-06-15 13:01 | ika | Steps to Reproduce Updated | |
2015-06-16 11:39 |
|
Note Added: 0042156 | |
2015-06-16 11:39 |
|
Assigned To | gka => bugmaster |
2015-06-16 11:39 |
|
Status | resolved => reviewed |
2015-06-16 12:03 |
|
Assigned To | bugmaster => mkv |
2015-06-17 17:51 |
|
Note Added: 0042209 | |
2015-06-17 17:51 | git | Note Added: 0042210 | |
2015-06-17 17:51 |
|
Note Added: 0042211 | |
2015-06-17 17:51 |
|
Assigned To | mkv => ika |
2015-06-17 17:51 |
|
Status | reviewed => assigned |
2015-06-17 17:52 |
|
Note Added: 0042212 | |
2015-06-17 17:52 |
|
Test case number | => bugs modalg_6 bug26241 |
2015-06-17 18:30 | git | Note Added: 0042214 | |
2015-06-17 18:38 | ika | Note Added: 0042215 | |
2015-06-17 18:38 | ika | Assigned To | ika => mkv |
2015-06-17 18:38 | ika | Status | assigned => feedback |
2015-06-18 12:43 |
|
Note Added: 0042228 | |
2015-06-18 12:43 | git | Note Added: 0042229 | |
2015-06-18 12:43 |
|
Note Added: 0042230 | |
2015-06-18 12:43 |
|
Status | feedback => tested |
2015-06-18 12:44 |
|
Assigned To | mkv => bugmaster |
2015-06-19 11:49 | bugmaster | Changeset attached | => occt master 93937391 |
2015-06-19 11:49 | bugmaster | Status | tested => verified |
2015-06-19 11:49 | bugmaster | Resolution | open => fixed |
2015-07-03 15:31 | bugmaster | Target Version | 7.1.0 => 7.0.0 |
2015-08-14 10:58 | git | Note Added: 0044230 | |
2015-09-01 11:35 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-10-16 14:56 |
|
Status | verified => closed |
2015-10-23 20:51 |
|
Fixed in Version | => 6.9.1 |